# Reliafy-CLI

./: .env  .gitignore  .nanorc  .vimrc  CITATION.cff  README.md  TESTING.md  icon_test.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  test.py
.github/workflows/: deploy-docs.yml
docs/: Thumbs.db  auth.md  examples.md  hooks.py  index.md  manifest.webmanifest  robots.txt  software-references-api.md  software-references-cli.md  software-references.md
docs/cli/: analyze.md  basics.md  command-overview.md  design.md  results-files.md  simulate.md
docs/problem-authoring/: index.md  recommended-texts.md
docs/problem-authoring/analyze/: form-only.md  sorm-monte-carlo.md
docs/profiles/: index.md  profile-reference.md
docs/stylesheets/: extra.css
overrides/: main.html
problems/: AT622Problem.py  AT625Problem.py  AU1dProblem.py  AU2Problem.py  AU3Problem.py  Chan1Problem.py  Sorensen81Problem.py
reliafy/: __init__.py  __main__.py  reliafy.py
reliafy/config/: data_models.py
reliafy/utils/: api_utils.py  auth_cli.py  icons.py  path_helpers.py  profile_management.py  utilities.py
site/: 404.html  hooks.py  index.html  sitemap.xml
site/auth/: index.html
site/examples/: index.html
site/problem-authoring/: index.html
site/profiles/: index.html
site/search/: search_index.json
site/software-references/: index.html
site/software-references-api/: index.html
site/software-references-cli/: index.html
tests/: test_cli_api_integration.py  test_cli_commands_problem_file.py  test_cli_main.py  test_package_import.py  test_profile_management.py
(+30 files in other folders)
